adding css for stylingg

--- a/html5/index.html
+++ b/html5/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full Stack Developer Journey</title>
+    <title>Full Stack Development Journey</title>
 </head>
 <body>
+    <!-- this is a comment -->
+     <!-- officially started this journey on 28/02/2026 -->
+     <!-- use div tag to divide website into sections -->
+      <!-- span is a inline element that allows helps us during styling to style maybe part of the div -->
     <form action="">
         First Name: <input type="text" name="firstname"> <br>
         Last Name: <input type="text" name="lastname"> <br>
