--- a/css/index.html
+++ b/css/index.html
@@ -19,7 +19,12 @@
     </header>
     <section>
         <h2>Home</h2>
-        <p>Lorem ipsum</p>
+        <div id="paragraph">
+            <p class="webtext">Lorem ipsum</p>
+            <p class="webtext">Lorem ipsum</p>
+            <p class="webtext">Lorem ipsum</p>
+            <p class="webtext">Lorem ipsum</p>
+        </div>
     </section>
 </body>
 </html>
