additional css notes

--- a/css/index.html
+++ b/css/index.html
@@ -19,6 +19,7 @@
     </header>
     <section>
         <h2>Home</h2>
+        <img src="/images/pavel-abramiankou-yzh7B-9sOhc-unsplash.jpg" alt="A beautiful landscape image" width="200px">
         <div id="paragraph">
             <p class="webtext">Lorem ipsum</p>
             <p class="webtext">Lorem ipsum</p>
